# mtmws

./: .gitignore  README.md  mtmws-notes.md
01_Jux/: CMakeLists.txt  TimeshiftLooper.h  main.cpp  timeshift_looper-v0.1-midi-only.uf2  usb_descriptors.c
01_Jux/python_sketch/: jux_computer.py  midi_loop_phaser.py  midi_loop_time_shift.py  midi_loop_timeshift+Computer.py  mtm_computer.py
02_GBS/: CMakeLists.txt  main.cpp  tusb_config.h
02_GBS/versions/: BGS_v0.2.uf2  GranularSlicer.uf2  main_v0.1.cpp
03_Atlas/: CMakeLists.txt  ComputerCard.h  main.cpp
03_Atlas/pre-processing/: corpus_header_generation.py
03_Corpus/: main.cpp
03_Corpus/pre-processing/: corpus_header_generation.py
04_Seq/: .gitignore  CmakeLists.txt  README.md  Seq.uf2  clock.h  info.yaml  main.cpp  samples.h  sequencer.h  soft_takeover.h  ui.h  voice.h
04_Seq/tools/: fetch_computercard.sh  process_samples.py
04_Seq/versions/: m3.uf2
05_telemetry/: CMakeLists.txt  telemetry_module.cpp  tusb_config.h  usb_descriptors.c
05_telemetry/web_interface/: app.js  web_interface.html
